[tool.poetry]
name = "nonebot-plugin-qq-chat-exporter"
version = "0.1.0"
description = "兼容qq-chat-exporter格式的qq消息导出插件"
authors = ["leafliber <leafliber@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leafliber/nonebot-plugin-qq-chat-exporter"
repository = "https://github.com/leafliber/nonebot-plugin-qq-chat-exporter"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.0"
nonebot-plugin-chatrecorder = "^0.7.0"
nonebot-plugin-htmlrender = "^0.3.0"

[tool.poetry.group.dev.dependencies]
nonebot2 = { version = "^2.3.0", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.4.0"

[tool.nonebot]
plugins = ["nonebot_plugin_qq_chat_exporter"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
